Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,10 +1,10 @@
 # Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "6129585462:AAGikMtzp7zb-yfqxa_6HkiE-IjkOc9cd5g"                              # Require restart after changing it while bot running
+OWNER_ID = "5366835263"                               # Require restart after changing it while bot running
+TELEGRAM_API = "27361131"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "1660b1a18b843e70ad32e8c84443028c"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
@@ -12,27 +12,27 @@ DATABASE_URL = ""                           # Require restart after changing it 
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = ""                             # Require restart after changing it while bot running
-STATUS_LIMIT = "6"
+SUDO_USERS = "5381870056 5092392994 1841535556 1446366033"                             # Require restart after changing it while bot running
+STATUS_LIMIT = "10"
 DEFAULT_UPLOAD = "gd"
-STATUS_UPDATE_INTERVAL = "10"
-AUTO_DELETE_MESSAGE_DURATION = "60"
+STATUS_UPDATE_INTERVAL = "2"
+AUTO_DELETE_MESSAGE_DURATION = "30"
 UPTOBOX_TOKEN = ""
 EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = "False"
 YT_DLP_OPTIONS = ""
-USE_SERVICE_ACCOUNTS = "False"
-SET_COMMANDS = "False"
+USE_SERVICE_ACCOUNTS = "True"
+SET_COMMANDS = "True"
 FSUB_IDS = ""
 BOT_PM = ""
 
 # GDrive Tools
-GDRIVE_ID = ""
-IS_TEAM_DRIVE = "False"
+GDRIVE_ID = "1biss_R7sR8FaLo1BjF3KX4Ed0Cu1AgSk"
+IS_TEAM_DRIVE = "True"
 STOP_DUPLICATE = "False"
 DISABLE_DRIVE_LINK = "False"
-INDEX_URL = ""
-GD_INFO = "Uploaded by WZML-X"
+INDEX_URL = "https://file.me-faxxy.workers.dev/0:/Mirror%20BOT/MLTB/"
+GD_INFO = "Uploaded by MLTB_BOT"
 
 # Rclone
 RCLONE_PATH = ""
@@ -43,8 +43,8 @@ RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/MeFaxxy/WZMLX"
+UPSTREAM_BRANCH = "master"
 
 # Leech
 LEECH_SPLIT_SIZE = ""
@@ -58,8 +58,8 @@ LEECH_FILENAME_CAPTION = ""
 LEECH_FILENAME_REMNAME = ""
 
 # Log Channel (Single ID)
-LEECH_LOG_ID = ""
-MIRROR_LOG_ID = ""
+LEECH_LOG_ID = "-1001864307508"
+MIRROR_LOG_ID = "-1001864307508"
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
@@ -73,7 +73,7 @@ QUEUE_DOWNLOAD = ""
 QUEUE_UPLOAD = ""
 
 # RSS
-RSS_DELAY = "600"
+RSS_DELAY = "900"
 RSS_CHAT_ID = ""
 
 # Mega
@@ -101,21 +101,20 @@ IMDB_TEMPLATE = ""
 MDL_TEMPLATE = ""
 
 # Telegraph
-TITLE_NAME = "WZ-M/L-X"
-AUTHOR_NAME = "WZML-X"
-AUTHOR_URL = "https://t.me/WZML_X"
+TITLE_NAME = "MLTB"
+AUTHOR_NAME = "@Faxxy"
+AUTHOR_URL = "https://t.me/Faxxy"
 
 # Extra
-SAFE_MODE = ""
-TIMEZONE = "Asia/Kolkata"
-IMAGES = ""
+TIMEZONE = "Asia/Pontianak"
+IMAGES = "https://telegra.ph/file/e208eb2799dd877ad6ea9.jpg"
 IMG_SEARCH = ""
 IMG_PAGE = ""
 BOT_THEME = "minimal"
 
 # M/L Buttons
-SHOW_MEDIAINFO = "False"
-SAVE_MSG = "False"
+SHOW_MEDIAINFO = ""
+SAVE_MSG = ""
 
 # Token system
 TOKEN_TIMEOUT = ""
